--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -20,7 +20,5 @@
 @media screen and (max-width: 1100px) {
   .cards {
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
   }
 }
